--- a/index.html
+++ b/index.html
@@ -50,27 +50,74 @@
 
     <!-- Features -->
 
-    <section class="section">
+    <section class="Features section">
     <div class="conatiner">
-    <div class="section-info">
+    <div class="Features-section-info section-info">
     <h2 class="section-tittle">Features</h2>
     <p class="description">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+    </div>
+
+    <!-- TABS -->
+
+    <div class="tabs">
+    <ul class="tabs-list">
+    <li class="tabs-item tabs-item-active"><a class="tabs-link" href="#">Simple Bookmarking</a></li>
+    <li class="tabs-item"><a class="tabs-link" href="#">Speedy Searching</a></li>
+    <li class="tabs-item"><a class="tabs-link" href="#">Easy Sharing</a></li>
+    </ul>
+
+    <!-- Tabs-panels  -->
+
+    <div class="tabs-ponels">
+    <div class="tabs-panel tabs-panel-active">
+    <section class="feature-tab-panel">
+    <img class="feature-tab-panel-img" src="img/Group3.svg" alt="bookmark" width="536" height="346">
+    <div class="feature-tab-panel-info">
+    <h3 class="feature-tab-panel-tittle">Bookmark in one click</h3>
+    <p class="feature-tab-panel-text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+    <a class="button-red" href="#">More info</a>
+    </div>
+    </section>
+    </div>
+
+    <div class="tabs-panel">
+    <section class="feature-tab-panel">
+    <img class="feature-tab-panel-img" src="img/Group2.svg" alt="bookmark" width="536" height="346">
+    <div class="feature-tab-panel-info">
+    <h3 class="feature-tab-panel-tittle">Intelligent search</h3>
+    <p class="feature-tab-panel-text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+    <a class="button-red" href="#">More info</a>
+    </div>
+    </section>
+    </div>
+
+    <div class="tabs-panel">
+    <section class="feature-tab-panel">
+    <img class="feature-tab-panel-img" src="img/Group.svg" alt="bookmark" width="536" height="346">
+    <div class="feature-tab-panel-info">
+    <h3 class="feature-tab-panel-tittle">Share your bookmarks</h3>
+    <p class="feature-tab-panel-text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+    <a class="button-red" href="#">More info</a>
+    </div>
+    </section>
+    </div>
+    </div>
     </div>
     </div>
     </section>
 
-    <section class="section">
+    <section class="Features section">
     <div class="conatiner">
-    <div class="section-info">
+    <div class="Features-section-info section-info">
     <h2 class="section-tittle">Download the extension</h2>
     <p class="description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
     </div>
     </div>
     </section>
 
-    <section class="section">
+    <section class="Features section">
     <div class="conatiner">
-    <div class="section-info">
+    <div class="Features-section-info section-info">
     <h2 class="section-tittle">Frequently Asked Questions</h2>
     <p class="description">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
     </div>
